<resources>
    <string name="app_name">profis</string>
    <string name="hours">%1$d h</string>
    <string name="contract_title">Zakázka</string>
    <string name="hours_title">Počet hodin</string>
    <string name="date_title">Datum</string>
    <string name="note_title">Poznámka</string>
    <string name="utilization_detail_title">Detail utilizace</string>
    <string name="utilization_create_title">Nová činnost</string>
    <string name="choose_date">Vybrat datum</string>
    <string name="saved">Uloženo</string>
    <string name="delete">Smazat</string>
    <string name="deleted">Smazáno</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
    <string name="delete_utilization_message">Opravdu chcete smazat utilizaci?</string>
    <string name="delete_utilization_title">Smazání utilizace</string>
    <string name="permission_contacts_title">Přístup ke kontaktům</string>
    <string name="permission_contacts_message">Z důvodu ...</string>
    <string name="utilization_notification_title">Nevykázaná utilizace</string>
    <string name="utilization_notification_message">Dnes zbývá vykázat %1$d h</string>
    <string name="notification_channel_name">Utilizace</string>
    <string name="notification_channel_desc">Notifikace s informací o nevykázaných hodinách</string>
</resources>
